--- a/package.json
+++ b/package.json
@@ -1,18 +1,62 @@
 {
-  "name": "vue-portal",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
-  "scripts": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kazura233/vue-portal.git"
-  },
-  "keywords": [],
-  "author": "kazura233",
+  "name": "@kazura/vue-portal",
+  "version": "0.0.1-alpha.1",
+  "description": "vue-portal",
+  "keywords": [
+    "vue",
+    "portal"
+  ],
+  "homepage": "https://github.com/kazura233/vue-portal",
+  "repository": "https://github.com/kazura233/vue-portal.git",
+  "bugs": "https://github.com/kazura233/vue-portal/issues",
+  "author": "kazura233 <kazira233@gmail.com>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/kazura233/vue-portal/issues"
+  "main": "lib/vue-portal.js",
+  "unpkg": "dist/vue-portal.js",
+  "module": "es/vue-portal.js",
+  "types": "types/index.d.ts",
+  "files": [
+    "dist",
+    "lib",
+    "es",
+    "src",
+    "types"
+  ],
+  "scripts": {
+    "clean": "rimraf dist lib es types",
+    "build": "rollup -c"
   },
-  "homepage": "https://github.com/kazura233/vue-portal#readme"
+  "dependencies": {
+    "@babel/runtime": "^7.14.0",
+    "vue": "^2.6.14"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.2",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.14.2",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-replace": "^3.0.0",
+    "@rollup/plugin-typescript": "^8.2.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.48.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "tslib": "^2.2.0",
+    "typescript": "^4.2.4"
+  },
+  "npmName": "@kazura233/vue-portal",
+  "npmFileMap": [
+    {
+      "basePath": "/dist/",
+      "files": [
+        "*.js"
+      ]
+    }
+  ],
+  "publishConfig": {
+    "access": "public"
+  }
 }
